# api_newsletter

./: .env  Cargo.toml  configuration.yml
scripts/: exec_migration.sh  initial_db_migrate.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
